[package]
name = "downtown"
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["elbaro <elbaro@users.noreply.github.com>"]
repository = "https://github.com/elbaro/downtown"
keywords = ["python", "profiler"]
categories = ["command-line-utilities", "development-tools::profiling"]
description = "A realtime BPF profiler"


[dependencies]
ansi-to-tui = "3.0.0"
bytes = "1.4.0"
clap = { version = "4.3.3", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
color-eyre = "0.6.2"
comfy-table = { version = "7.0.1", features = ["custom_styling"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
dotenvy = "0.15.7"
libbpf-rs = "0.20.1"
libc = "0.2.146"
log = "0.4.18"
pretty_env_logger = "0.5.0"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
sudo = "0.6.0"
syntect = "5.0.0"
thiserror = "1.0.40"
tonari-actor = "0.8.3"

[build-dependencies]
libbpf-cargo = "0.20.1"
